<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Update blank fragment layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.MainFragment">

    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/日常账本"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/search"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="@id/btnSearch"
            android:layout_toLeftOf="@id/btnSearch"
            android:src="@drawable/edit"
            android:background="@color/grey"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/green"
        android:paddingTop="30dp">
        <TextView
            android:text="@string/本月收入"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingLeft="40dp"
            android:paddingRight="10dp" />

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:textColor="@color/grey"
            android:layout_height="50dp"
            android:text="@string/本月结余"
            android:padding="10dp"/>

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:textColor="@color/grey"
            android:layout_height="50dp"
            android:text="@string/本月支出"
            android:padding="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/green"
        android:paddingTop="30dp">
        <TextView
            android:id="@+id/income"
            android:text="@string/_0"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingLeft="40dp"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/rest"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:textColor="@color/grey"
            android:layout_height="50dp"
            android:text="@string/_0"
            android:paddingLeft="100dp"/>
        <TextView
            android:id="@+id/pay"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:textColor="@color/grey"
            android:layout_height="50dp"
            android:text="@string/_0"
            android:paddingLeft="100dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/main_lv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey"
        android:divider="@null"
        android:dividerHeight="6dp"
        android:padding="10dp"
        android:scrollbars="none" />

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add_tally"
        android:background="@color/grey"/>
</LinearLayout>